--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ keybase_username: # your keybase user name
 wikidata_id: # your wikidata id
 dblp_url: # your DBLP profile url
 stackoverflow_id: #your stackoverflow id
-contact_note: You can also find my ORCID, google scholar, github, and twitter via the icons listed above
+# contact_note: You can also find my ORCID, google scholar, github, and twitter via the icons listed above
 
 
 # -----------------------------------------------------------------------------
